--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ table, th, td {
 	<td></td> <!-- cuando no conozco el valor -->
   </tr>
 </table>
-
+<iframe src="https://www.google.com/maps/d/u/1/embed?mid=1YRkWsLr81EK-mvMww_OUUgYIrgM" width="640" height="480"></iframe>
 </body>
 </html>
 
